# outlook_exporter

./: .gitignore  OutlookExporter.spec  README.md  SETUP.md  START.bat  build.bat  outlook_advanced_exporter.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: conftest.py  test_exporter.py
