[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-exporter"
version = "1.0.0"
description = "Exportiert E-Mails und Anhänge aus Outlook 2010+ mit Filter und Konfliktauflösung"
requires-python = ">=3.10"
dependencies = [
    'pywin32>=306; sys_platform=="win32"',
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
build = ["pyinstaller>=6.0"]

[tool.setuptools]
# Einzelnes Skript-Modul – kein Paket
py-modules = ["outlook_advanced_exporter"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E741",  # ambiguous-variable-name (l/I/O kommen in tkinter-Code vor)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["gui: Tests die tkinter/Display benötigen (in CI ggf. übersprungen)"]
